--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"vite": "^6.0.0"
 	},
 	"dependencies": {
+		"canvas": "^3.2.0",
 		"chart.js": "^2.9.4",
 		"pg": "^8.13.3",
 		"svelte-multiselect": "^11.0.0-rc.1"
