--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"@types/chart.js": "^2.9.41",
 		"@types/pg": "^8.11.11",
+		"super-sitemap": "^1.0.5",
 		"svelte": "^5.28.3",
 		"svelte-check": "^4.0.0",
 		"svelte-loading-spinners": "^0.3.6",
